# KairoONNX

./: CMakeLists.txt  README.md
src/: KairoONNX.cppm  KairoONNXOptimize.cppm  KairoONNXRuntime.cppm
tests/: smoke.cpp
tests/fixtures/: reference_cnn.onnx  reference_cnn_output.f32  reference_mlp.onnx  reference_mlp_input.f32  reference_mlp_output.f32  reference_transformer.onnx  reference_transformer_input.f32  reference_transformer_output.f32
tools/: generate_reference_fixture.py
